# duplicate-url-discarder

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  CHANGES.rst  LICENSE  README.rst  pyproject.toml  tox.ini
.github/workflows/: publish.yml  test.yml
duplicate_url_discarder/: __init__.py  _addon.py  _fingerprinter.py  _rule.py  fingerprinter.py  middlewares.py  pipelines.py  processor.py  rule.py  scrapy_component.py  url_canonicalizer.py  utils.py
duplicate_url_discarder/policies/: __init__.py  base.py  query_removal.py
duplicate_url_discarder/processors/: __init__.py  base.py  normalize.py  query_removal.py  query_removal_except.py  subpath_removal.py
tests/: test_addon.py  test_fingerprinter.py  test_middlewares.py  test_pipelines.py  test_policies.py  test_processor.py  test_processors.py  test_rule.py  test_url_canonicalizer.py  test_utils.py
