[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "duplicate-url-discarder"
description = "Discarding duplicate URLs based on rules."
authors = [{name = "Zyte Group Ltd", email = "info@zyte.com"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.8"
dependencies = [
    "Scrapy >= 2.11.0",
    "url-matcher >= 0.5.0",
    "w3lib >= 2.0.1",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/zytedata/duplicate-url-discarder"

[project.optional-dependencies]
rules = ["duplicate-url-discarder-rules"]

[tool.setuptools.dynamic]
version = {attr = "duplicate_url_discarder.__version__"}

[tool.setuptools.package-data]
duplicate_url_discarder = ["py.typed"]

[tool.isort]
profile = "black"
multi_line_output = 3

[[tool.mypy.overrides]]
module = [
    "scrapy.*",
    "url_matcher.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
# Allow test functions to be untyped
disallow_untyped_defs = false
